[feat] scenario gitaction

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ env:
   IMAGE_PREFIX: amore-gg/amore-ai
 
 jobs:
-  # # ----------------------------
-  # # 1) Voice 이미지 빌드 & 푸시 (임시 비활성화)
-  # # ----------------------------
+  # ----------------------------
+  # 1) Voice 이미지 빌드 & 푸시 (임시 비활성화)
+  # ----------------------------
   # build-voice:
   #   runs-on: ubuntu-latest
   #   permissions:
@@ -25,17 +25,17 @@ jobs:
   #   steps:
   #     - name: Checkout
   #       uses: actions/checkout@v4
-
+  #
   #     - name: Set up Docker Buildx
   #       uses: docker/setup-buildx-action@v3
-
+  #
   #     - name: Login GHCR
   #       uses: docker/login-action@v3
   #       with:
   #         registry: ${{ env.REGISTRY }}
   #         username: ${{ github.actor }}
   #         password: ${{ secrets.GITHUB_TOKEN }}
-
+  #
   #     - name: Build & Push (voice)
   #       uses: docker/build-push-action@v5
   #       with:
@@ -47,9 +47,9 @@ jobs:
   #         cache-from: type=gha
   #         cache-to: type=gha,mode=max
 
-  # # ----------------------------
-  # # 2) Lip 이미지 빌드 & 푸시 (임시 비활성화)
-  # # ----------------------------
+  # ----------------------------
+  # 2) Lip 이미지 빌드 & 푸시 (임시 비활성화)
+  # ----------------------------
   # build-lip:
   #   runs-on: ubuntu-latest
   #   permissions:
@@ -58,17 +58,17 @@ jobs:
   #   steps:
   #     - name: Checkout
   #       uses: actions/checkout@v4
-
+  #
   #     - name: Set up Docker Buildx
   #       uses: docker/setup-buildx-action@v3
-
+  #
   #     - name: Login GHCR
   #       uses: docker/login-action@v3
   #       with:
   #         registry: ${{ env.REGISTRY }}
   #         username: ${{ github.actor }}
   #         password: ${{ secrets.GITHUB_TOKEN }}
-
+  #
   #     - name: Build & Push (lip)
   #       uses: docker/build-push-action@v5
   #       with:
@@ -81,9 +81,108 @@ jobs:
   #         cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 3) ElevenLabs 이미지 빌드 & 푸시
+  # 3) ElevenLabs 이미지 빌드 & 푸시 (임시 비활성화)
   # ----------------------------
-  build-elevenlabs:
+  # build-elevenlabs:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #
+  #     - name: Login GHCR
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #
+  #     - name: Build & Push (elevenlabs)
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./voice/eleven_labs
+  #         push: true
+  #         tags: |
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:latest
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 4) Video Qwen 이미지 빌드 & 푸시 (임시 비활성화)
+  # ----------------------------
+  # build-video-qwen:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #
+  #     - name: Login GHCR
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #
+  #     - name: Build & Push (video-qwen)
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./video/image/qwen
+  #         push: true
+  #         tags: |
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:latest
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 5) Video I2V (Wan2) 이미지 빌드 & 푸시 (임시 비활성화)
+  # ----------------------------
+  # build-video-i2v:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #
+  #     - name: Login GHCR
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+  #
+  #     - name: Build & Push (video-i2v)
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./video/i2v/wan2
+  #         push: true
+  #         tags: |
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:latest
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 6) Scenario(Qwen2.5-VL-7B-Instruct) 이미지 빌드 & 푸시 (유일하게 활성화)
+  # ----------------------------
+  build-scenario-qwen:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -102,88 +201,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push (elevenlabs)
+      - name: Build & Push (scenario-qwen-api)
         uses: docker/build-push-action@v5
         with:
-          context: ./voice/eleven_labs
+          context: ./scenario/Qwen2.5-VL-7B-Instruct
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-scenario-qwen-api:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-scenario-qwen-api:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 4) Video Qwen 이미지 빌드 & 푸시
-  # ----------------------------
-  build-video-qwen:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build & Push (video-qwen)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./video/image/qwen
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # ----------------------------
-  # 5) Video I2V (Wan2) 이미지 빌드 & 푸시
-  # ----------------------------
-  build-video-i2v:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build & Push (video-i2v)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./video/i2v/wan2
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # ----------------------------
-  # 6) EC2 배포
+  # 7) EC2 배포: scenario만 배포, 나머지 서비스 미포함
   # ----------------------------
   deploy:
-    needs: [build-elevenlabs, build-video-qwen, build-video-i2v]  # build-voice, build-lip 임시 비활성화
+    needs: [build-scenario-qwen]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
