--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -204,7 +204,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./scenario/Qwen2.5-VL-7B-Instruct
-          dockerfile: ./scenario/Qwen2.5-VL-7B-Instruct/Dockerfile # << 경로 직접 명시!!
+          dockerfile: ./scenario/Qwen2.5-VL-7B-Instruct/Dockerfile
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-scenario-qwen-api:latest
