--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -214,7 +214,41 @@ jobs:
   #         cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 6) Scenario(Exaone) 이미지 빌드 & 푸시
+  # 6) MMAudio 이미지 빌드 & 푸시
+  # ----------------------------
+  build-mmaudio:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push (mmaudio-api)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./video/sound/mmaudio
+          dockerfile: ./video/sound/mmaudio/Dockerfile
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-mmaudio-api:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-mmaudio-api:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 7) Scenario(Exaone) 이미지 빌드 & 푸시
   # ----------------------------
   build-scenario-exaone:
     runs-on: ubuntu-latest
@@ -248,10 +282,10 @@ jobs:
           cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 7) EC2 배포
+  # 8) EC2 배포
   # ----------------------------
   deploy:
-    needs: [build-scenario-exaone, build-latentsync]
+    needs: [build-scenario-exaone, build-latentsync, build-mmaudio]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
