--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -282,10 +282,44 @@ jobs:
           cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 8) EC2 배포
+  # 8) Merge API 이미지 빌드 & 푸시
+  # ----------------------------
+  build-merge-api:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push (merge-api)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./api
+          dockerfile: ./api/Dockerfile
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-merge-api:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-merge-api:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 9) EC2 배포
   # ----------------------------
   deploy:
-    needs: [build-scenario-exaone, build-latentsync, build-mmaudio]
+    needs: [build-scenario-exaone, build-latentsync, build-mmaudio, build-merge-api]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
