--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -97,6 +97,7 @@ services:
     volumes:
       - latentsync_uploads:/app/uploads
       - latentsync_outputs:/app/outputs
+      - shared_media:/app/shared
     restart: unless-stopped
 
   mmaudio-api:
@@ -111,6 +112,21 @@ services:
     volumes:
       - mmaudio_uploads:/app/uploads
       - mmaudio_outputs:/app/outputs
+      - shared_media:/app/shared
+    restart: unless-stopped
+
+  merge-api:
+    image: ghcr.io/amore-gg/amore-ai-merge-api:latest
+    container_name: merge-api
+    ports:
+      - "5000:5000"
+    environment:
+      - ENV=prod
+      - PYTHONUNBUFFERED=1
+    volumes:
+      - merge_uploads:/app/uploads
+      - merge_outputs:/app/outputs
+      - shared_media:/app/shared
     restart: unless-stopped
 
 volumes:
@@ -128,3 +144,6 @@ volumes:
   latentsync_outputs:
   mmaudio_uploads:
   mmaudio_outputs:
+  merge_uploads:
+  merge_outputs:
+  shared_media:
