--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   # ----------------------------
-  # 1) Voice 이미지 빌드 & 푸시
+  # 1) Voice(Zonos) 이미지 빌드 & 푸시
   # ----------------------------
   # build-voice:
   #   runs-on: ubuntu-latest
@@ -114,104 +114,104 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # # ----------------------------
-  # # 3) ElevenLabs 이미지 빌드 & 푸시
-  # # ----------------------------
-  # build-elevenlabs:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: read
-  #     packages: write
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+  # ----------------------------
+  # 3) ElevenLabs 이미지 빌드 & 푸시
+  # ----------------------------
+  build-elevenlabs:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
   
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
   
-  #     - name: Login GHCR
-  #       uses: docker/login-action@v3
-  #       with:
-  #         registry: ${{ env.REGISTRY }}
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
   
-  #     - name: Build & Push (elevenlabs)
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./voice/eleven_labs
-  #         push: true
-  #         tags: |
-  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:latest
-  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:${{ github.sha }}
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+      - name: Build & Push (elevenlabs)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./voice/eleven_labs
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  # # ----------------------------
-  # # 4) Video Qwen 이미지 빌드 & 푸시
-  # # ----------------------------
-  # build-video-qwen:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: read
-  #     packages: write
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+  # ----------------------------
+  # 4) Video Qwen 이미지 빌드 & 푸시
+  # ----------------------------
+  build-video-qwen:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
   
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
   
-  #     - name: Login GHCR
-  #       uses: docker/login-action@v3
-  #       with:
-  #         registry: ${{ env.REGISTRY }}
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
   
-  #     - name: Build & Push (video-qwen)
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./video/image/qwen
-  #         push: true
-  #         tags: |
-  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:latest
-  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:${{ github.sha }}
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+      - name: Build & Push (video-qwen)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./video/image/qwen
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-qwen:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  # # ----------------------------
-  # # 5) Video I2V (Wan2) 이미지 빌드 & 푸시
-  # # ----------------------------
-  # build-video-i2v:
-  #   runs-on: ubuntu-latest
-  #   permissions:
-  #     contents: read
-  #     packages: write
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+  # ----------------------------
+  # 5) Video I2V (Wan2) 이미지 빌드 & 푸시
+  # ----------------------------
+  build-video-i2v:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
   
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
   
-  #     - name: Login GHCR
-  #       uses: docker/login-action@v3
-  #       with:
-  #         registry: ${{ env.REGISTRY }}
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
   
-  #     - name: Build & Push (video-i2v)
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./video/i2v/wan2
-  #         push: true
-  #         tags: |
-  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:latest
-  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:${{ github.sha }}
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
+      - name: Build & Push (video-i2v)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./video/i2v/wan2
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   # ----------------------------
   # 6) MMAudio 이미지 빌드 & 푸시
