--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  # # voice-api (임시 비활성화)
+  # # voice-api (zonos)
   # voice-api:
   #   image: ghcr.io/amore-gg/amore-ai-voice:latest
   #   container_name: voice-api
@@ -13,7 +13,7 @@ services:
   #     - voice_output:/app/generated_audio
   #   restart: unless-stopped
 
-  # # lip-api (임시 비활성화)
+  # # lip-api (wav2lip)
   # lip-api:
   #   image: ghcr.io/amore-gg/amore-ai-lip:latest
   #   container_name: lip-api
@@ -29,46 +29,48 @@ services:
   #     - /home/ubuntu/amore-ai/lip/face_detection/detection/sfd/s3fd.pth:/app/face_detection/detection/sfd/s3fd.pth
   #   restart: unless-stopped
 
-  # elevenlabs-api:
-  #   image: ghcr.io/amore-gg/amore-ai-elevenlabs:latest
-  #   container_name: elevenlabs-api
-  #   ports:
-  #     - "1100:1100"
-  #   environment:
-  #     - ENV=prod
-  #     - PYTHONUNBUFFERED=1
-  #     - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
-  #   volumes:
-  #     - elevenlabs_output:/app/generated_audio
-  #   restart: unless-stopped
+  elevenlabs-api:
+    image: ghcr.io/amore-gg/amore-ai-elevenlabs:latest
+    container_name: elevenlabs-api
+    ports:
+      - "1100:1100"
+    environment:
+      - ENV=prod
+      - PYTHONUNBUFFERED=1
+      - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
+    volumes:
+      - elevenlabs_output:/app/generated_audio
+    restart: unless-stopped
 
-  # video-qwen-api:
-  #   image: ghcr.io/amore-gg/amore-ai-video-qwen:latest
-  #   container_name: video-qwen-api
-  #   ports:
-  #     - "4100:4100"
-  #   environment:
-  #     - ENV=prod
-  #     - PYTHONUNBUFFERED=1
-  #     - COMFYUI_URL=${COMFYUI_URL}
-  #   volumes:
-  #     - qwen_uploads:/app/uploads
-  #     - qwen_outputs:/app/outputs
-  #   restart: unless-stopped
+  video-qwen-api:
+    image: ghcr.io/amore-gg/amore-ai-video-qwen:latest
+    container_name: video-qwen-api
+    ports:
+      - "4100:4100"
+    environment:
+      - ENV=prod
+      - PYTHONUNBUFFERED=1
+      - COMFYUI_URL=${COMFYUI_URL}
+    volumes:
+      - qwen_uploads:/app/uploads
+      - qwen_outputs:/app/outputs
+      - shared_media:/app/shared
+    restart: unless-stopped
 
-  # video-i2v-api:
-  #   image: ghcr.io/amore-gg/amore-ai-video-i2v:latest
-  #   container_name: video-i2v-api
-  #   ports:
-  #     - "4200:4200"
-  #   environment:
-  #     - ENV=prod
-  #     - PYTHONUNBUFFERED=1
-  #     - COMFYUI_URL=${COMFYUI_URL}
-  #   volumes:
-  #     - i2v_uploads:/app/uploads
-  #     - i2v_outputs:/app/outputs
-  #   restart: unless-stopped
+  video-i2v-api:
+    image: ghcr.io/amore-gg/amore-ai-video-i2v:latest
+    container_name: video-i2v-api
+    ports:
+      - "4200:4200"
+    environment:
+      - ENV=prod
+      - PYTHONUNBUFFERED=1
+      - COMFYUI_URL=${COMFYUI_URL}
+    volumes:
+      - i2v_uploads:/app/uploads
+      - i2v_outputs:/app/outputs
+      - shared_media:/app/shared
+    restart: unless-stopped
   
 
   scenario-exaone-api:
