[fix] tts 서버 저장 위치 변경

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,6 +40,7 @@ services:
       - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
     volumes:
       - elevenlabs_output:/app/generated_audio
+      - shared_media:/app/shared
     restart: unless-stopped
 
   video-qwen-api:
