--- a/scenario/exaone/requirements.txt
+++ b/scenario/exaone/requirements.txt
@@ -4,12 +4,5 @@ transformers>=4.35.0
 torch>=2.0.0
 pydantic==2.5.0
 python-multipart==0.0.6
-
-# Vision model dependencies
-vllm>=0.6.0
-qwen-vl-utils>=0.0.14
-pillow>=10.0.0
 accelerate>=0.24.0
-
-# Optional: CUDA support (if using GPU)
-# torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+sentencepiece>=0.1.99
